@@ -31,6 +31,7 @@ Broker:
 - Fix problem with out of order calls to free() when restarting a lazy bridge.
 - Fix an ACL with topic "#" incorrectly granting access to $SYS.
 - mosquitto_passwd utility now reports errors more clearly.
+- Fix "mosquitto_passwd -U".
 - Fix retained messages incorrectly being set on wildcard topics, leading to
   duplicate retained messages being sent on subscription. Closes bug #1116233.
 - Don't discard listener values when no "port" option given. Closes bug
